<resources>
    <string name="app_name">Reto1</string>
    <string name="action_settings">Settings</string>
    <string name="str_desc_img">Descripcion de Imagen</string>
    <string name="str_hint_user">Email o Username</string>
    <string name="str_hint_pass">Password</string>
    <string name="str_txt_cuenta">Usted tiene una cuenta</string>
    <string name="str_btn_ingresar">Ingresar</string>
    <string name="str_lbl_conectar">O conéctate con</string>
    <string name="str_btn_google">Google</string>
    <string name="str_btn_facebook">Facebook</string>
</resources>
