<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="la.hackspace.irvin.reto1.MainActivity"
    tools:showIn="@layout/activity_main">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorNegro"
        android:alpha="0.4"/>

    <ImageView
        android:id="@+id/img_id_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_icon_logo"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/str_desc_img"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/linear_id_iniciar"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_below="@+id/img_id_logo"
        style="@style/android_stl_wh">

        <EditText
            android:id="@+id/txt_id_user"
            android:hint="@string/str_hint_user"
            android:layout_marginBottom="20dp"
            style="@style/android_stl_edit"/>

        <EditText
            android:id="@+id/txt_id_pass"
            android:inputType="textPassword"
            android:hint="@string/str_hint_pass"
            android:layout_marginBottom="30dp"
            style="@style/android_stl_edit"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            style="@style/android_stl_wh">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_txt_cuenta"
                android:textColor="#fff"/>

            <Button
                android:text="@string/str_btn_ingresar"
                style="@style/android_stl_btn"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="@string/str_lbl_conectar"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_above="@+id/linear_id_redes"
        style="@style/android_stl_wh"/>

    <LinearLayout
        android:id="@+id/linear_id_redes"
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        style="@style/android_stl_wh">

        <Button
            android:id="@+id/btn_id_google"
            android:text="@string/str_btn_google"
            android:textColor="@color/colorGooglePlus"
            android:drawableLeft="@mipmap/google_plus"
            android:drawableStart="@mipmap/google_plus"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            style="@style/android_stl_btn"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_id_facebook"
            android:text="@string/str_btn_facebook"
            android:textColor="@color/colorFacebook"
            android:drawableLeft="@mipmap/facebook"
            android:drawableStart="@mipmap/facebook"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            style="@style/android_stl_btn"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>
